hw-detect (1.52) UNRELEASED; urgency=low

  * Code cleanup:
    - remove support for 2.4 series kernels

 -- Frans Pop <fjp@debian.org>  Thu, 12 Apr 2007 16:57:43 +0200

hw-detect (1.51) unstable; urgency=low

  * Multiply menu-item-numbers by 100

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:44:32 -0400

hw-detect (1.50) unstable; urgency=low

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A
  * Swedish (sv.po) by Daniel Nylander
  * Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 16:49:26 +0100

hw-detect (1.49) unstable; urgency=low

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Wed, 31 Jan 2007 11:35:05 +0100

hw-detect (1.48) unstable; urgency=low

  * hw-detect.sh: [hppa] make sure initramfs-tools will load scsi modules for
    controlers on a native HP bus. Closes: #406735.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)

 -- Frans Pop <fjp@debian.org>  Wed, 24 Jan 2007 02:14:10 +0100

hw-detect (1.47) unstable; urgency=low

  * sysfs-update-devnames.sh
    FireWire Ethernet devices are often a subdevice of the actual (PCI)
    controller and thus do not have vendor/device info under /sys/class/net.
    However, we can recognize FireWire devices by their bus type. Having this
    recognition should make it easier for users to identify their "regular"
    Ethernet NIC.

  [ Updated translations ]
  * Danish (da.po) by Claus Hindsgaul
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Galician (gl.po) by Jacobo Tarrio