@@ -2,8 +2,9 @@ hw-detect (1.52) UNRELEASED; urgency=low
 
   * Code cleanup:
     - remove support for 2.4 series kernels
+    - remove support for discover
 
- -- Frans Pop <fjp@debian.org>  Thu, 12 Apr 2007 16:57:43 +0200
+ -- Frans Pop <fjp@debian.org>  Thu, 12 Apr 2007 16:59:37 +0200
 
 hw-detect (1.51) unstable; urgency=low
 
